<resources>
    <string name="app_name">HardWhere</string>
    <string name="main_button">Main</string>
    <string name="low_button">Low</string>
    <string name="inventory">INVENTORY</string>
    <string name="add_button">Add</string>
    <string name="material_name">Material Name</string>
    <string name="material_count">Count</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="search_title">Search</string>
    <string name="settings">Settings</string>
    <string name="tbd">More to come!</string>
    <string name="minimum_count">Minimum Count</string>
    <string name="empty_inventory">Welcome to HardWhere! \n It seems your inventory is empty. \n Add a material today!</string>

    <string-array name="unit_types">\
        <!-- the first item is the default choice; leave item below as first item -->
        <item></item>
        <item>ft</item>
        <item>inches</item>
        <item>meters</item>
        <item>ounces</item>
        <item>pounds</item>
        <item>tons</item>
    </string-array>
</resources>
